# pepper-x

./: Cargo.toml  README.md  pepper-x-install.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: app.rs  app_model.rs  cli.rs  history_store.rs  history_view.rs  main.rs  onboarding.rs  overlay.rs  session_runtime.rs  settings.rs  settings_view.rs  transcript_log.rs  transcription.rs  window.rs
crates/pepperx-asr/: Cargo.toml
crates/pepperx-asr/src/: lib.rs  speaker_filter.rs  transcriber.rs
crates/pepperx-audio/: Cargo.toml
crates/pepperx-audio/src/: devices.rs  level_monitor.rs  recording.rs
crates/pepperx-cleanup/: Cargo.toml
crates/pepperx-cleanup-helper/: Cargo.toml
crates/pepperx-cleanup-helper/src/: main.rs
crates/pepperx-cleanup/src/: cleanup.rs  lib.rs
crates/pepperx-corrections/: Cargo.toml
crates/pepperx-ipc/: Cargo.toml
crates/pepperx-models/: Cargo.toml
crates/pepperx-models/src/: download.rs
crates/pepperx-platform-gnome/: Cargo.toml
crates/pepperx-platform-gnome/src/: atspi.rs  context.rs  evdev_modifier_capture.rs  screenshot.rs
crates/pepperx-session/: Cargo.toml
crates/pepperx-uinput-helper/: Cargo.toml
crates/pepperx-uinput-helper/src/: main.rs
docs/superpowers/plans/: 2026-04-30-w1-build-and-first-run.md  2026-05-01-w6-atspi-kde-whitelist.md  2026-05-01-w9-uinput-text-fallback.md  2026-05-02-w2-kde-global-shortcut.md  2026-05-02-w4b-ci-dependency-fix.md  2026-05-03-w4c-rust-toolchain-pin.md  (+1 more)
packaging/deb/: pepper-x.desktop
scripts/: dev-install-extension.sh
(+9 files in other folders)
