[workspace]
members = [
    "app",
    "crates/pepperx-asr",
    "crates/pepperx-audio",
    "crates/pepperx-corrections",
    "crates/pepperx-models",
    "crates/pepperx-ipc",
    "crates/pepperx-session",
    "crates/pepperx-platform-gnome",
    "crates/pepperx-cleanup",
    "crates/pepperx-cleanup-helper",
    "crates/pepperx-uinput-helper",
]
resolver = "2"

[workspace.lints.clippy]
result_large_err = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
